--- a/package.json
+++ b/package.json
@@ -3,14 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/icons": "^4.11.3",
     "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "aos": "^2.3.4",
+    "material-ui": "^0.20.2",
     "react": "^18.2.0",
+    "react-aos": "^1.0.1",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
+    "react-loading": "^2.0.3",
     "react-redux": "^8.0.5",
-    "react-scripts": "5.0.1",
+    "react-reveal": "^1.2.2",
+    "react-scripts": "^2.1.3",
+    "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
